--- a/message_room_application_server/config/application.yml
+++ b/message_room_application_server/config/application.yml
@@ -18,3 +18,6 @@ encryption:
 	encrypted_log: server_base64_log.txt
 	standart_log: server_log.txt
 	
+	
+spring.data.mongodb.uri=mongodb://localhost:27017/message-room-db
+	
